demo/ingress-demo.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: tangxin-test
  
# ---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # annotations:
  #   kubernetes.io/ingress.class: slb-inner
  name: slb-inner-demo
  namespace: tangxin-test
spec:
  rules:
  - host: foo2.bar.com
    http:
      paths:
        - backend:
            serviceName: slb-inner-demo
            servicePort: 80
          path: "/"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: slb-inner-demo
  namespace: tangxin-test
spec:
  selector:
    matchLabels:
      app: slb-inner-demo
  template:
    metadata:
      labels:
        app: slb-inner-demo
    spec:
      containers:
      - name: slb-inner-demo
        image: nginx:1.15
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: slb-inner-demo
  namespace: tangxin-test
spec:
  selector:
    app: slb-inner-demo
  ports:
  - port: 80
    targetPort: 80

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: slb-inner-client
  namespace: tangxin-test
spec:
  selector:
    matchLabels:
      app: slb-inner-client
  template:
    metadata:
      labels:
        app: slb-inner-client
    spec:
      containers:
      - name: slb-inner-client
        image: uyinn28/alpine-tool
        ports:
        - containerPort: 80
